Corrected a bug with the graph on Firefox (the arrows ending the links where not showed)

--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -17,7 +17,6 @@ marker#end {
     stroke: @linkColor;
     stroke-width: 1.5px;
     opacity: .7;
-    marker-end: url(#end);
     
     transition: opacity 250ms;
     -webkit-transition: opacity 250ms;
